@@ -343,11 +343,10 @@ jobs:
             - ".git"
 
       - run: |
-          export JAVA_HOME=${JAVA_HOME:-`which javac|xargs readlink -f|xargs dirname|xargs dirname`}
           make showvars
           make compile daikon.jar
       - run:
-          command: export JAVA_HOME=${JAVA_HOME:-`which javac|xargs readlink -f|xargs dirname|xargs dirname`} && make -C java typecheck
+          command: make -C java typecheck
           no_output_timeout: 30m
 
   typecheck-with-locally-built-CF:
